--- a/.gitconfig
+++ b/.gitconfig
@@ -6,6 +6,8 @@
 	helper = cache --timeout=86400
 [fetch]
 	prune = true
+[http]
+	proxy = http://proxy-de.glb.my-it-solutions.net:84
 [mergetool]
 	keepBackup = false
 	writeToTemp = true
