.gitconfig: core.longpaths

--- a/.gitconfig
+++ b/.gitconfig
@@ -3,6 +3,7 @@
 [core]
 	autocrlf = true
 	hooksPath = C:/Project/None/src/profile/git/hooks
+	longpaths = true
 [credential]
 	helper = cache --timeout=86400
 [fetch]
