--- a/.gitconfig
+++ b/.gitconfig
@@ -6,6 +6,8 @@
 	helper = cache --timeout=86400
 [fetch]
 	prune = true
+[merge]
+	tool = kdiff3
 [mergetool]
 	keepBackup = false
 	writeToTemp = true
