--- a/.gitconfig
+++ b/.gitconfig
@@ -8,6 +8,10 @@
 	prune = true
 [http]
 	proxy = http://proxy-de.glb.my-it-solutions.net:84
+[http "https://onup.it-solutions.atos.net"]
+	sslKey = /home/s230984/.sslKeyStore/PC20190418068939.key
+	sslCert = /home/s230984/.sslKeyStore/PC20190418068939.crt
+	sslCertPasswordProtected = false
 [mergetool]
 	keepBackup = false
 	writeToTemp = true
