.gitconfig: rerere.enabled

--- a/.gitconfig
+++ b/.gitconfig
@@ -13,6 +13,8 @@
 	rebase = preserve
 [push]
 	default = simple
+[rerere]
+	enabled = true
 [user]
 	email = Vincent.VSmeets@GMail.com
 	name = Vincent Smeets
