--- a/.gitconfig
+++ b/.gitconfig
@@ -2,7 +2,7 @@
 	prefix-log = !branch_name=`git symbolic-ref --short HEAD` && branch_basename=`basename \"$branch_name\"` && git filter-branch --msg-filter \"sed -e '1s/^\\(\\[.*\\]\\)*[ \t]*/[${branch_basename}] /'\"
 [core]
 	autocrlf = true
-	hooksPath = /home/s230984/src/github.com/V-Smeets/profile/git/hooks
+	hooksPath = C:/Project/None/src/profile/git/hooks
 [credential]
 	helper = cache --timeout=86400
 [fetch]
