--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,7 @@
 [alias]
 	prefix-log = !branch_name=`git symbolic-ref --short HEAD` && branch_basename=`basename \"$branch_name\"` && git filter-branch --msg-filter \"sed -e '1s/^\\(\\[.*\\]\\)*[ \t]*/[${branch_basename}] /'\"
 [core]
+	autocrlf = true
 	hooksPath = /home/s230984/src/github.com/V-Smeets/profile/git/hooks
 [credential]
 	helper = cache --timeout=86400
