.gitconfig: http.https://onupgit.fsc.atos-services.net.sslKey

--- a/.gitconfig
+++ b/.gitconfig
@@ -8,6 +8,11 @@
 	prune = true
 [http]
 	proxy = http://localhost:3128
+[http "https://onupgit.fsc.atos-services.net"]
+	sslKey = C:/Project/keyStore.d/S230984.key
+	sslCert = C:/Project/trustStore.d/S230984.crt
+	sslCAInfo = C:/Project/trustStore.d/S230984.cacrt
+	sslVerify = false
 [mergetool]
 	keepBackup = false
 	writeToTemp = true
