.ssh/config: * Require SSH Hardening

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,3 +1,7 @@
 # ssh configuration
 
 Host *
+	Ciphers # Define using ssh-audit
+	HostKeyAlgorithms # Define using ssh-audit
+	KexAlgorithms # Define using ssh-audit
+	MACs # Define using ssh-audit
