.ssh/config: appsrv313a

--- a/.ssh/config
+++ b/.ssh/config
@@ -13,6 +13,10 @@ Host appsrv306
 	# MBBB ONUP
 	LocalForward 18604 127.0.0.1:18604
 
+Host appsrv313a
+	Hostname 127.0.0.5
+	User atdevism
+
 Host github.com
 	ForwardX11 no
 	ProxyCommand connect -H localhost:3128 %h %p
