.ssh/config: te-jump

--- a/.ssh/config
+++ b/.ssh/config
@@ -30,6 +30,10 @@ Host github.com
 Host ssh-audit.com
 	ProxyCommand connect -H localhost:3128 %h %p
 
+Host te-jump
+	Hostname 127.53.3.11
+	User atdevism
+
 Host *
 	Ciphers aes128-ctr,aes192-ctr,aes256-ctr,aes128-gcm@openssh.com,aes256-gcm@openssh.com,chacha20-poly1305@openssh.com,aes128-cbc,aes192-cbc,aes256-cbc
 	ForwardAgent yes
