.ssh/config: demogateway.sdmc.ao-srv.com

--- a/.ssh/config
+++ b/.ssh/config
@@ -17,6 +17,12 @@ Host appsrv313a
 	Hostname 127.0.0.5
 	User atdevism
 
+Host demogateway.sdmc.ao-srv.com demogateway
+	HostName demogateway.sdmc.ao-srv.com
+	# +hmac-sha2-512
+	MACs umac-128-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-sha2-512-etm@openssh.com,hmac-sha2-512
+	User s230984
+
 Host github.com
 	ForwardX11 no
 	ProxyCommand connect -H localhost:3128 %h %p
