.ssh/config: vmma006.mars.atos.local

--- a/.ssh/config
+++ b/.ssh/config
@@ -34,6 +34,11 @@ Host te-jump
 	Hostname 127.53.3.11
 	User atdevism
 
+Host vmma006.mars.atos.local vmma006
+	HostName vmma006.mars.atos.local
+	ProxyJump demogateway.sdmc.ao-srv.com
+	User s230984
+
 Host *
 	Ciphers aes128-ctr,aes192-ctr,aes256-ctr,aes128-gcm@openssh.com,aes256-gcm@openssh.com,chacha20-poly1305@openssh.com,aes128-cbc,aes192-cbc,aes256-cbc
 	ForwardAgent yes
