--- a/.ssh/config
+++ b/.ssh/config
@@ -39,6 +39,12 @@ Host vmma006.mars.atos.local vmma006
 	ProxyJump demogateway.sdmc.ao-srv.com
 	User s230984
 
+Host vmma19?.mars.atos.local vmma19?
+	# +hmac-sha1
+	MACs umac-128-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-sha2-512-etm@openssh.com,hmac-sha1
+	ProxyJump vmma006.mars.atos.local
+	User s230984
+
 Host *
 	Ciphers aes128-ctr,aes192-ctr,aes256-ctr,aes128-gcm@openssh.com,aes256-gcm@openssh.com,chacha20-poly1305@openssh.com,aes128-cbc,aes192-cbc,aes256-cbc
 	ForwardAgent yes
