.ssh/config: vmma191-forward

--- a/.ssh/config
+++ b/.ssh/config
@@ -45,6 +45,58 @@ Host vmma19?.mars.atos.local vmma19?
 	ProxyJump vmma006.mars.atos.local
 	User s230984
 
+Host vmma191-forward
+	HostName vmma191.mars.atos.local
+	# port number + 20000
+	# SwarmPit
+	LocalForward 20888 127.0.0.1:888
+	# Oracle
+	LocalForward 21521 127.0.0.1:1521
+	# PostgreSQL
+	LocalForward 25432 127.0.0.1:5432
+	# onup_base mbba
+	LocalForward 28000 127.0.0.1:8000
+	# onup_base mbbb glcs
+	LocalForward 28001 127.0.0.1:8001
+	# onup_base mbbb mgmt
+	LocalForward 28002 127.0.0.1:8002
+	# onup_ece mbba
+	LocalForward 28010 127.0.0.1:8010
+	# onup_ece mbbb glcs
+	LocalForward 28011 127.0.0.1:8011
+	# onup_ece mbbb mgmt
+	LocalForward 28012 127.0.0.1:8012
+	# onup_odp mbba
+	LocalForward 28020 127.0.0.1:8020
+	# onup_odp mbbb glcs
+	LocalForward 28021 127.0.0.1:8021
+	# onup_odp mbbb mgmt
+	LocalForward 28022 127.0.0.1:8022
+	# onup_cn mbba
+	LocalForward 28030 127.0.0.1:8030
+	# onup_cn mbbb glcs
+	LocalForward 28031 127.0.0.1:8031
+	# onup_cn mbbb mgmt
+	LocalForward 28032 127.0.0.1:8032
+	# onup_ece_dev mbba
+	LocalForward 28040 127.0.0.1:8040
+	# onup_ece_dev mbbb glcs
+	LocalForward 28041 127.0.0.1:8041
+	# onup_ece_dev mbbb mgmt
+	LocalForward 28042 127.0.0.1:8042
+	# onup_cn_dev mbba
+	LocalForward 28050 127.0.0.1:8050
+	# onup_cn_dev mbbb glcs
+	LocalForward 28051 127.0.0.1:8051
+	# onup_cn_dev mbbb mgmt
+	LocalForward 28052 127.0.0.1:8052
+	# KeyCloak
+	LocalForward 28800 127.0.0.1:8800
+	LocalForward 28801 127.0.0.1:8801
+	MACs umac-128-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-sha2-512-etm@openssh.com,hmac-sha1
+	ProxyJump vmma006.mars.atos.local
+	User s230984
+
 Host *
 	Ciphers aes128-ctr,aes192-ctr,aes256-ctr,aes128-gcm@openssh.com,aes256-gcm@openssh.com,chacha20-poly1305@openssh.com,aes128-cbc,aes192-cbc,aes256-cbc
 	ForwardAgent yes
