--- a/.ssh/config
+++ b/.ssh/config
@@ -7,6 +7,7 @@ Host github.com
 Host *
 	Ciphers aes128-ctr,aes192-ctr,aes256-ctr,aes128-gcm@openssh.com,aes256-gcm@openssh.com,chacha20-poly1305@openssh.com,aes128-cbc,aes192-cbc,aes256-cbc
 	ForwardAgent yes
+	ForwardX11 yes
 	HostKeyAlgorithms # Define using ssh-audit
 	KexAlgorithms # Define using ssh-audit
 	MACs # Define using ssh-audit
