--- a/.ssh/config
+++ b/.ssh/config
@@ -8,6 +8,7 @@ Host *
 	Ciphers aes128-ctr,aes192-ctr,aes256-ctr,aes128-gcm@openssh.com,aes256-gcm@openssh.com,chacha20-poly1305@openssh.com,aes128-cbc,aes192-cbc,aes256-cbc
 	ForwardAgent yes
 	ForwardX11 yes
+	ForwardX11Trusted yes
 	HostKeyAlgorithms # Define using ssh-audit
 	KexAlgorithms # Define using ssh-audit
 	MACs # Define using ssh-audit
