--- a/.ssh/config
+++ b/.ssh/config
@@ -13,3 +13,4 @@ Host *
 	KexAlgorithms curve25519-sha256,curve25519-sha256@libssh.org,diffie-hellman-group-exchange-sha256,diffie-hellman-group16-sha512,diffie-hellman-group18-sha512,diffie-hellman-group14-sha256
 	MACs umac-128-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-sha2-512-etm@openssh.com
 	ServerAliveInterval 60
+	XAuthLocation "/c/Program Files/VcXsrv/xauth.exe"
