.ssh/config: * Ciphers

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,7 +1,7 @@
 # ssh configuration
 
 Host *
-	Ciphers # Define using ssh-audit
+	Ciphers chacha20-poly1305@openssh.com,aes128-ctr,aes192-ctr,aes256-ctr,aes128-gcm@openssh.com,aes256-gcm@openssh.com
 	HostKeyAlgorithms # Define using ssh-audit
 	KexAlgorithms # Define using ssh-audit
 	MACs # Define using ssh-audit
