--- a/.ssh/config
+++ b/.ssh/config
@@ -27,6 +27,9 @@ Host github.com
 	ForwardX11 no
 	ProxyCommand connect -H localhost:3128 %h %p
 
+Host ssh-audit.com
+	ProxyCommand connect -H localhost:3128 %h %p
+
 Host *
 	Ciphers aes128-ctr,aes192-ctr,aes256-ctr,aes128-gcm@openssh.com,aes256-gcm@openssh.com,chacha20-poly1305@openssh.com,aes128-cbc,aes192-cbc,aes256-cbc
 	ForwardAgent yes
