.ssh/config: ssh-audit.com

--- a/.ssh/config
+++ b/.ssh/config
@@ -4,6 +4,8 @@ Host github.com
 	ForwardX11 no
 	ProxyCommand connect -H localhost:3128 %h %p
 
+Host ssh-audit.com
+
 Host *
 	Ciphers chacha20-poly1305@openssh.com,aes128-ctr,aes192-ctr,aes256-ctr,aes128-gcm@openssh.com,aes256-gcm@openssh.com
 	HostKeyAlgorithms ssh-ed25519-cert-v01@openssh.com,ssh-ed25519,rsa-sha2-512-cert-v01@openssh.com,rsa-sha2-256-cert-v01@openssh.com,rsa-sha2-512,rsa-sha2-256
