.ssh/config. ssh-audit.com ProxyCommand

--- a/.ssh/config
+++ b/.ssh/config
@@ -5,6 +5,7 @@ Host github.com
 	ProxyCommand connect -H localhost:3128 %h %p
 
 Host ssh-audit.com
+	ProxyCommand connect -H localhost:3128 %h %p
 
 Host *
 	Ciphers chacha20-poly1305@openssh.com,aes128-ctr,aes192-ctr,aes256-ctr,aes128-gcm@openssh.com,aes256-gcm@openssh.com
