--- a/.ssh/config
+++ b/.ssh/config
@@ -9,6 +9,6 @@ Host *
 	ForwardAgent yes
 	ForwardX11 yes
 	ForwardX11Trusted yes
-	HostKeyAlgorithms # Define using ssh-audit
+	HostKeyAlgorithms ssh-ed25519-cert-v01@openssh.com,sk-ssh-ed25519-cert-v01@openssh.com,rsa-sha2-512-cert-v01@openssh.com,rsa-sha2-256-cert-v01@openssh.com,ssh-ed25519,sk-ssh-ed25519@openssh.com,rsa-sha2-512,rsa-sha2-256
 	KexAlgorithms # Define using ssh-audit
 	MACs # Define using ssh-audit
