--- a/.ssh/config
+++ b/.ssh/config
@@ -10,5 +10,5 @@ Host *
 	ForwardX11 yes
 	ForwardX11Trusted yes
 	HostKeyAlgorithms ssh-ed25519-cert-v01@openssh.com,sk-ssh-ed25519-cert-v01@openssh.com,rsa-sha2-512-cert-v01@openssh.com,rsa-sha2-256-cert-v01@openssh.com,ssh-ed25519,sk-ssh-ed25519@openssh.com,rsa-sha2-512,rsa-sha2-256
-	KexAlgorithms # Define using ssh-audit
+	KexAlgorithms curve25519-sha256,curve25519-sha256@libssh.org,diffie-hellman-group-exchange-sha256,diffie-hellman-group16-sha512,diffie-hellman-group18-sha512,diffie-hellman-group14-sha256
 	MACs # Define using ssh-audit
