--- a/.ssh/config
+++ b/.ssh/config
@@ -2,6 +2,6 @@
 
 Host *
 	Ciphers chacha20-poly1305@openssh.com,aes128-ctr,aes192-ctr,aes256-ctr,aes128-gcm@openssh.com,aes256-gcm@openssh.com
-	HostKeyAlgorithms # Define using ssh-audit
+	HostKeyAlgorithms ssh-ed25519-cert-v01@openssh.com,sk-ssh-ed25519-cert-v01@openssh.com,rsa-sha2-512-cert-v01@openssh.com,rsa-sha2-256-cert-v01@openssh.com,ssh-ed25519,sk-ssh-ed25519@openssh.com,rsa-sha2-512,rsa-sha2-256
 	KexAlgorithms # Define using ssh-audit
 	MACs # Define using ssh-audit
