--- a/.ssh/config
+++ b/.ssh/config
@@ -4,6 +4,8 @@ Host localhost
 	IdentityFile ~/.ssh/borg_PC-Vincent
 
 Host vsmeets.nl
+	# +ssh-rsa,ssh-dss
+	HostKeyAlgorithms ssh-ed25519-cert-v01@openssh.com,sk-ssh-ed25519-cert-v01@openssh.com,rsa-sha2-512-cert-v01@openssh.com,rsa-sha2-256-cert-v01@openssh.com,ssh-ed25519,sk-ssh-ed25519@openssh.com,rsa-sha2-512,rsa-sha2-256,ssh-rsa,ssh-dss
 
 Host *
 	Ciphers chacha20-poly1305@openssh.com,aes128-ctr,aes192-ctr,aes256-ctr,aes128-gcm@openssh.com,aes256-gcm@openssh.com
