--- a/.ssh/config
+++ b/.ssh/config
@@ -7,6 +7,8 @@ Host vsmeets.nl
 	# +ssh-rsa,ssh-dss
 	HostKeyAlgorithms ssh-ed25519-cert-v01@openssh.com,sk-ssh-ed25519-cert-v01@openssh.com,rsa-sha2-512-cert-v01@openssh.com,rsa-sha2-256-cert-v01@openssh.com,ssh-ed25519,sk-ssh-ed25519@openssh.com,rsa-sha2-512,rsa-sha2-256,ssh-rsa,ssh-dss
 	HostName vsmeets.nl
+	# +hmac-sha1,umac-64@openssh.com,hmac-sha2-256,hmac-sha2-512
+	MACs umac-128-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-sha2-512-etm@openssh.com,hmac-sha1,umac-64@openssh.com,hmac-sha2-256,hmac-sha2-512
 
 Host *
 	Ciphers chacha20-poly1305@openssh.com,aes128-ctr,aes192-ctr,aes256-ctr,aes128-gcm@openssh.com,aes256-gcm@openssh.com
