--- a/.ssh/config
+++ b/.ssh/config
@@ -10,6 +10,7 @@ Host vsmeets.nl
 	# +hmac-sha1,umac-64@openssh.com,hmac-sha2-256,hmac-sha2-512
 	MACs umac-128-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-sha2-512-etm@openssh.com,hmac-sha1,umac-64@openssh.com,hmac-sha2-256,hmac-sha2-512
 	Port 7685
+	User u5414p43958
 
 Host *
 	Ciphers chacha20-poly1305@openssh.com,aes128-ctr,aes192-ctr,aes256-ctr,aes128-gcm@openssh.com,aes256-gcm@openssh.com
