--- a/.ssh/config
+++ b/.ssh/config
@@ -1,5 +1,18 @@
 # ssh configuration
 
+# Audi CN tui-demo
+Host appsrv306
+	Hostname 127.0.0.5
+	User atdevism
+	# +ssh-rsa
+	HostKeyAlgorithms ssh-ed25519-cert-v01@openssh.com,sk-ssh-ed25519-cert-v01@openssh.com,rsa-sha2-512-cert-v01@openssh.com,rsa-sha2-256-cert-v01@openssh.com,ssh-ed25519,sk-ssh-ed25519@openssh.com,rsa-sha2-512,rsa-sha2-256,ssh-rsa
+	# +hmac-sha1
+	MACs umac-128-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-sha2-512-etm@openssh.com,hmac-sha1
+	# MBBA ONUP
+	LocalForward 18614 127.0.0.1:18614
+	# MBBB ONUP
+	LocalForward 18604 127.0.0.1:18604
+
 Host github.com
 	ForwardX11 no
 	ProxyCommand connect -H localhost:3128 %h %p
