--- a/.ssh/config
+++ b/.ssh/config
@@ -1,6 +1,7 @@
 # ssh configuration
 
 Host localhost
+	IdentityFile ~/.ssh/borg_PC-Vincent
 
 Host *
 	Ciphers chacha20-poly1305@openssh.com,aes128-ctr,aes192-ctr,aes256-ctr,aes128-gcm@openssh.com,aes256-gcm@openssh.com
