Enable ssh access to vmma09?

--- a/.ssh/config
+++ b/.ssh/config
@@ -39,7 +39,7 @@ Host vmma006.mars.atos.local vmma006
 	ProxyJump demogateway.sdmc.ao-srv.com
 	User s230984
 
-Host vmma19?.mars.atos.local vmma19?
+Host vmma09?.mars.atos.local vmma09? vmma19?.mars.atos.local vmma19?
 	# +hmac-sha1
 	MACs umac-128-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-sha2-512-etm@openssh.com,hmac-sha1
 	ProxyJump vmma006.mars.atos.local
