.ssh/config: ivwb*.audi-connect-mgm.web.audi.vwg

--- a/.ssh/config
+++ b/.ssh/config
@@ -27,6 +27,36 @@ Host github.com
 	ForwardX11 no
 	ProxyCommand connect -H localhost:9000 %h %p
 
+# tui-demo mbbb glcs
+Host ivwb3407.audi-connect-mgm.web.audi.vwg
+	User root
+	# +ssh-rsa
+	HostKeyAlgorithms ssh-ed25519-cert-v01@openssh.com,sk-ssh-ed25519-cert-v01@openssh.com,rsa-sha2-512-cert-v01@openssh.com,rsa-sha2-256-cert-v01@openssh.com,ssh-ed25519,sk-ssh-ed25519@openssh.com,rsa-sha2-512,rsa-sha2-256,ssh-rsa
+	# +hmac-sha1
+	MACs umac-128-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-sha2-512-etm@openssh.com,hmac-sha1
+
+# tui-dev mbbb glcs
+Host ivwb3408.audi-connect-mgm.web.audi.vwg
+	User root
+	# +ssh-rsa
+	HostKeyAlgorithms ssh-ed25519-cert-v01@openssh.com,sk-ssh-ed25519-cert-v01@openssh.com,rsa-sha2-512-cert-v01@openssh.com,rsa-sha2-256-cert-v01@openssh.com,ssh-ed25519,sk-ssh-ed25519@openssh.com,rsa-sha2-512,rsa-sha2-256,ssh-rsa
+	# +hmac-sha1
+	MACs umac-128-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-sha2-512-etm@openssh.com,hmac-sha1
+
+Host ivwb3585.audi-connect-mgm.web.audi.vwg
+
+Host ivwb3586.audi-connect-mgm.web.audi.vwg
+
+# tui-demo mbba
+# tui-demo mbbb mgmt
+Host ivwb4363.audi-connect-mgm.web.audi.vwg
+	User root
+
+# tui-dev mbba
+# tui-dev mbbb mgmt
+Host ivwb4364.audi-connect-mgm.web.audi.vwg
+	User root
+
 Host ssh-audit.com
 	ProxyCommand connect -H localhost:9000 %h %p
 
